@@ -25,7 +25,7 @@ public class MpnMpidMismatchItemProcessor implements ItemProcessor<MpnMpidProduc
 		// MDM lookup by mpid
 		try {
 			LOGGER.debug("MpnMpidMismatchItemProcessor - calling getMdmProductView api with mpid: {}", item.getFmMpid());
-			MdmProductView mdmMpidProdView = pdmMdmWebservicesFeignClient.getMdmProductView(new Long(item.getFmMpid()));
+			MdmProductView mdmMpidProdView = pdmMdmWebservicesFeignClient.getMdmProductView(Long.valueOf(item.getFmMpid()));
 
 			if (mdmMpidProdView != null) {
 				item.setMdmMpidMatch(true);
@@ -38,7 +38,7 @@ public class MpnMpidMismatchItemProcessor implements ItemProcessor<MpnMpidProduc
 		// MDM lookup by mpn
 		try {
 			LOGGER.debug("MpnMpidMismatchItemProcessor - calling getMdmProductView api with mpn: {}", item.getVmMpn());
-			MdmProductView mdmMpnProdView = pdmMdmWebservicesFeignClient.getMdmProductView(new Long(item.getVmMpn()));
+			MdmProductView mdmMpnProdView = pdmMdmWebservicesFeignClient.getMdmProductView(Long.valueOf(item.getVmMpn()));
 
 			if (mdmMpnProdView != null) {
 				item.setMdmMpnMatch(true);
